--- a/landing.css
+++ b/landing.css
@@ -46,7 +46,7 @@ a {
 }
 
 main {
-  width: 60vw;
+  width: 600px;
   margin: 0 auto 100px;
   padding-top: 50px;
 }
@@ -104,7 +104,7 @@ main {
 
 footer {
   display: flex;
-  justify-content: center; 
+  justify-content: center;
   background-color: white;
 }
 
