--- a/landing.css
+++ b/landing.css
@@ -30,7 +30,7 @@ header{
   margin: 5px 20px;
 }
 
-a {
+header a {
   color: white;
   border-radius: 10px;
   padding: 10px 15px;
@@ -108,9 +108,10 @@ footer {
   background-color: white;
 }
 
-footer a{
+footer a {
   color: black;
-  margin: 0 50px;  
+  text-decoration: none;
+  margin: 5px 50px;  
 }
 
 footer a:hover {
