--- a/registration.css
+++ b/registration.css
@@ -2,7 +2,6 @@ body {
   margin: 0;
   height: 100vh;
   background: linear-gradient(to bottom, #a4fffa, #ffffff);
-  font-family: Arial;
 }
 
 .lbrown {
@@ -30,6 +29,8 @@ header {
   border-radius: 10px;
   padding: 10px 15px;
   text-decoration: none;
+  color: #C0ECE9;
+  font-weight: bold;
 }
 
 #trello:hover {
